--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite --watch"
     },
     "devDependencies": {
-        "axios": "^1.6.1",
-        "laravel-vite-plugin": "^0.8.0",
-        "vite": "^4.0.0"
+        "@vitejs/plugin-vue": "^4.5.1",
+        "axios": "^1.6.2",
+        "laravel-vite-plugin": "^0.8.1"
+    },
+    "dependencies": {
+        "vue": "^3.2.36",
+        "vue-loader": "^17.3.1"
     }
 }
